[package]
name = "raumfi_library"
version = "0.0.4"
authors = [" tora <tora@raum.network>"]
edition = "2021"
description = "Library Periphery for RaumFiDex"
homepage = "https://github.com/Raum-Network/Raum-Core/contracts/lib"
repository = "https://github.com/Raum-Network/Raum-Core/contracts/lib"
readme = "README.md"
license = "MIT"
keywords = [ "raumfi", "dex", "soroban"]
rust-version = "1.73"
publish = true

[lib]
crate-type = ["cdylib" , "rlib"]

[dependencies]
soroban-sdk = { version = "21.7.4" }
num-integer = { version = "0.1.45", default-features = false, features = ["i128"] }


[dev_dependencies]
soroban-sdk = { version = "21.7.4", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
