[package]
name = "router"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib" , "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "21.7.4" }
soroban-token-sdk = { version = "21.7.4" }
num-integer = { version = "0.1.45", default-features = false, features = ["i128"] }
raumfi_library = "0.1.0"

[dev-dependencies]
soroban-sdk = { version = "21.7.4", features = ["testutils"] } 
raumfi_library = "0.1.0"



