[package]
name = "rntoken"
description = "Soroban standard token contract"
edition = "2021"
publish = false
version = "1.0.0"

[lib]
crate-type = ["cdylib"]


[dependencies]
soroban-sdk = { version = "21.7.4" }
soroban-token-sdk = { version = "21.7.4" }

[dev_dependencies]
soroban-sdk = { version = "21.7.4", features = ["testutils"] }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

